--- a/html/main.html
+++ b/html/main.html
@@ -14,6 +14,7 @@
     <form class="register">
         <input type="button" value="Registro" class="register-button" onclick="window.location='/registro'"/>
         <input type="button" value="Login" class="register-button" onclick="window.location='/login'"/>
+        <input type="button" value="Album" class="register-button" onclick="window.location='/menu/album'"/>
     </form>
     <br>
 </body>
