--- a/html/login.html
+++ b/html/login.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Inicio de Sesión</title>
+  <title>EJERCICIO 6</title>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <meta name="google-signin-client_id" content="1075415468106-gfpaqoo0vc23u0bahda9qu8cf2n1ai5p.apps.googleusercontent.com">
   <script src="/js/signIn.js"></script>
