--- a/html/main.html
+++ b/html/main.html
@@ -15,6 +15,7 @@
         <input type="button" value="Registro" class="register-button" onclick="window.location='/registro'"/>
         <input type="button" value="Login" class="register-button" onclick="window.location='/login'"/>
         <input type="button" value="Album" class="register-button" onclick="window.location='/menu/album'"/>
+        <input type="button" value="Mapa" class="register-button" onclick="window.location='/mapa'"/>
     </form>
     <br>
 </body>
